--- a/static/index.html
+++ b/static/index.html
@@ -1,7 +1,24 @@
-<!doctype html>
-<meta name="viewport" content="width=device-width, minimum-scale=1">
-
-<label>Counter: <span id="counter">?</span></label>
-<button id="increment">Increment</button><button id="decrement">Decrement</button>
-
-<script src="bootstrap.js" defer></script>
+<!--
+@license
+Copyright (c) 2018 The Polymer Project Authors. All rights reserved.
+This code may only be used under the BSD style license found at http://polymer.github.io/LICENSE.txt
+The complete set of authors may be found at http://polymer.github.io/AUTHORS.txt
+The complete set of contributors may be found at http://polymer.github.io/CONTRIBUTORS.txt
+Code distributed by Google as part of the polymer project is also
+subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
+-->
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <meta name="theme-color" content="#1A1033">
+    <title>ReadyLateyLater</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,500" rel="stylesheet">
+    <link rel="stylesheet" href="./styles/index.css">
+    <link rel="manifest" href="./manifest.json">
+    <script src="bootstrap.js" type="module"></script>
+    <script src="components.js" type="module"></script>
+  </head>
+  <body>
+  </body>
+</html>
