--- a/static/index.html
+++ b/static/index.html
@@ -2,6 +2,6 @@
 <meta name="viewport" content="width=device-width, minimum-scale=1">
 
 <label>Counter: <span id="counter">?</span></label>
-<button id="increment">Increment</button><button id="decrement">Decrement</button>
+<button id="increment">Increment</button><button id="decrement">Decrement</button><button id="fetchcrement">Fetchcrement</button>
 
 <script src="bootstrap.js" defer></script>
